--- a/PArticulo/PArticulo/PArticulo.csproj
+++ b/PArticulo/PArticulo/PArticulo.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App.cs" />
+    <Compile Include="Properties\QueryResult.cs" />
+    <Compile Include="Properties\PersisterHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
