--- a/PSerpisAd/PSerpisAd/PSerpisAd.csproj
+++ b/PSerpisAd/PSerpisAd/PSerpisAd.csproj
@@ -48,6 +48,7 @@
     <Compile Include="TreeViewHelper.cs" />
     <Compile Include="ComboBoxHelper.cs" />
     <Compile Include="DbCommandHelper.cs" />
+    <Compile Include="WindowHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
