ArticuloPersister parcialmente resuelto

--- a/PArticulo/PArticulo/PArticulo.csproj
+++ b/PArticulo/PArticulo/PArticulo.csproj
@@ -79,6 +79,7 @@
     <Compile Include="ArticuloView.cs" />
     <Compile Include="gtk-gui\PArticulo.ArticuloView.cs" />
     <Compile Include="Articulo.cs" />
+    <Compile Include="ArticuloPersister.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
